Sonarcloud fixes/improvements